--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,4 +1,5 @@
 <p id="notice"><%= notice %></p>
+<p><%= link_to t('views.common.users'), users_path %></p>
 
 <h1><%= Book.model_name.human %></h1>
 
