--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,12 +12,12 @@
   <body>
   <p class="navbar-text pull-right">
   <% if user_signed_in? %>
-    Logged in as <strong><%= current_user.email %></strong>.
-    <%= link_to 'Edit profile', edit_user_registration_path, class: 'navbar-link' %> |
-    <%= link_to "Logout", destroy_user_session_path, method: :delete, class: 'navbar-link'  %>
+    <%= User.human_attribute_name(:sign_in_as) %> <strong><%= current_user.email %></strong>.
+    <%= link_to User.human_attribute_name(:edit_profile), edit_user_registration_path, class: 'navbar-link' %> |
+    <%= link_to User.human_attribute_name(:logout), destroy_user_session_path, method: :delete, class: 'navbar-link'  %>
   <% else %>
-    <%= link_to "Sign up", new_user_registration_path, class: 'navbar-link'  %> |
-    <%= link_to "Login", new_user_session_path, class: 'navbar-link'  %>
+    <%= link_to User.human_attribute_name(:sign_up), new_user_registration_path, class: 'navbar-link'  %> |
+    <%= link_to User.human_attribute_name(:login), new_user_session_path, class: 'navbar-link'  %>
   <% end %>
   </p>
   <% if notice %>
