--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -33,6 +33,11 @@
   <% end %>
 </p>
 
+<section class="stats">
+  <%= render 'devise/shared/stats' %>
+  <%= render 'follow_form' %>
+</section>
+
 <% if current_user == @user %>
   <%= link_to t('views.common.edit'), edit_user_registration_path %> |
 <% end %>
