--- a/app/views/users/_follow_form.html.erb
+++ b/app/views/users/_follow_form.html.erb
@@ -1,6 +1,6 @@
 <% unless current_user == @user %>
   <div id="follow_form">
-  <% if current_user.following.find_by(id: @user.id) %>
+  <% if current_user.followings.find_by(id: @user.id) %>
     <%= render 'unfollow' %>
   <% else %>
     <%= render 'follow' %>
