--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,4 +1,4 @@
-<h1><%= t('book.edit_book') %></h1>
+<h1><%= (t 'book.edit_book', name: Book.model_name.human) %></h1>
 
 <%= render 'form', book: @book %>
 
