--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -30,4 +30,4 @@
 
 <br>
 
-<%= link_to (t 'book.new_book', name: Book.model_name.human), new_book_path %>
+<%= link_to (t 'views.common.new_book', name: Book.model_name.human), new_book_path %>
