日本語化の修正

--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,4 +1,4 @@
-<p><%= link_to User.human_attribute_name(:user_list), users_path %></p>
+<p><%= link_to t('users.index.user_list'), users_path %></p>
 
 <h1><%= Book.model_name.human %></h1>
 
