--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -14,17 +14,17 @@
 
   <div class="field">
     <%= f.label :postal_code %>
-    <%= f.number_field :postal_code, autocomplete: "postal_code" %>
+    <%= f.number_field :postal_code, autocomplete: "postal-code" %>
   </div>
 
   <div class="field">
     <%= f.label :address %>
-    <%= f.text_field :address, autocomplete: "address" %>
+    <%= f.text_field :address %>
   </div>
 
   <div class="field">
     <%= f.label :profile %>
-    <%= f.text_area :profile, autocomplete: "profile" %>
+    <%= f.text_area :profile %>
   </div>
 
   <div class="field">
