postal_codeのデータ型を変更

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -14,7 +14,7 @@
 
   <div class="field">
     <%= f.label :postal_code %>
-    <%= f.number_field :postal_code, autocomplete: "postal-code" %>
+    <%= f.text_field :postal_code, autocomplete: "postal-code" %>
   </div>
 
   <div class="field">
