--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,7 +3,7 @@
 <p>
   <strong><%= User.human_attribute_name(:avatar) %>:</strong>
   <% if @user.avatar.attached? %>
-    <%= image_tag @user.avatar.variant(resize:'100x100').processed %>
+    <%= image_tag @user.avatar.variant(resize:'100x100') %>
   <% end %>
 </p>
 
