--- a/app/views/devise/shared/_stats.html.erb
+++ b/app/views/devise/shared/_stats.html.erb
@@ -1,4 +1,3 @@
-<% @user ||= current_user %>
 <div class="stats">
   <a href="<%= followings_user_path(@user) %>">
     <strong id="followings" class="stat">
@@ -12,4 +11,5 @@
     </strong>
     <%= t('views.common.followers') %>
   </a>
+<% user ||= current_user %>
 </div>
