--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -33,8 +33,8 @@
   <% end %>
 </p>
 
-<section class="stats">
-  <%= render 'devise/shared/stats' %>
+<section>
+  <%= render partial: 'devise/shared/stats', locals: { user: @user } %>
   <%= render 'follow_form' %>
 </section>
 
