フォローボタンの表示方法を変更

--- a/app/views/users/_follow_form.html.erb
+++ b/app/views/users/_follow_form.html.erb
@@ -1,6 +1,6 @@
 <% unless current_user == user %>
-  <div id="follow_form">
-  <% if current_user.followings.find_by(id: user.id) %>
+  <div>
+  <% if @follow_relationsihp %>
     <%= render partial: 'unfollow', locals: { user: user } %>
   <% else %>
     <%= render partial: 'follow', locals: { user: user } %>
