--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -6,7 +6,7 @@
   <div class="field">
     <%= f.label :avatar %>
     <% if @user.avatar.attached? %>
-      <%= image_tag @user.avatar.variant(resize:'100x100') %> </br>
+      <%= image_tag @user.avatar.variant(resize_to_limit:[100, 100]) %> </br>
     <% end %>
     <%= f.file_field :avatar %>
   </div>
