--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -21,7 +21,7 @@
 </p>
 
 <%= render partial:'comments/comments', locals: { comments: @comments } %>
-<%= render partial:'comments/form', locals: { comment_to: @book, comment: @comment, url: book_comments_path(@book, @comment) } %>
+<%= render partial:'comments/form', locals: { comment_target: @book } %>
 
 <%= link_to t('views.common.edit'), edit_book_path(@book) %> |
 <%= link_to t('views.common.back'), books_path %>
