--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,10 +1,10 @@
-<%= form_with(model: comment, url: url, local: true) do |form| %>
-  <% if comment.errors.any? %>
+<%= form_with(model: [comment_target, Comment.new], local: true) do |form| %>
+  <% if comment_target.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(comment.errors.count, "error") %> prohibited this comment from being saved:</h2>
+      <h2><%= pluralize(comment_target.errors.count, "error") %> prohibited this comment from being saved:</h2>
 
       <ul>
-        <% comment.errors.full_messages.each do |message| %>
+        <% comment_target.errors.full_messages.each do |message| %>
           <li><%= message %></li>
         <% end %>
       </ul>
