showでFollowRelationshipのインスタンスが入るように修正

--- a/app/views/users/_follow_form.html.erb
+++ b/app/views/users/_follow_form.html.erb
@@ -1,7 +1,7 @@
 <% unless current_user == user %>
   <div>
-  <% if @follow_relationsihp %>
     <%= render partial: 'unfollow', locals: { user: user } %>
+  <% if @follow_relationsihp.new_record? %>
   <% else %>
     <%= render partial: 'follow', locals: { user: user } %>
   <% end %>
