単一の値が入っているのに複数形で記述していたactive_relationshipの修正

--- a/app/views/users/_follow_form.html.erb
+++ b/app/views/users/_follow_form.html.erb
@@ -1,9 +1,9 @@
 <% unless current_user == user %>
   <div>
   <% if @follow_relationsihp.new_record? %>
-    <%= render partial: 'follow', locals: { active_relationships:@follow_relationsihp, user: user } %>
+    <%= render partial: 'follow', locals: { active_relationship:@follow_relationsihp, user: user } %>
   <% else %>
-    <%= render partial: 'unfollow', locals: { active_relationships:@follow_relationsihp, user: user } %>
+    <%= render partial: 'unfollow', locals: { active_relationship:@follow_relationsihp, user: user } %>
   <% end %>
   </div>
 <% end %>
