--- a/app/views/users/_follow.html.erb
+++ b/app/views/users/_follow.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: active_relationships) do |f| %>
+<%= form_with(model: active_relationship) do |f| %>
   <div><%= hidden_field_tag :followed_id, user.id %></div>
   <%= f.submit t('views.common.following'), class: "btn btn-primary" %>
 <% end %>
