--- a/app/views/users/_unfollow.html.erb
+++ b/app/views/users/_unfollow.html.erb
@@ -1,3 +1,3 @@
-<%= form_with(model: active_relationships, html: { method: :delete }) do |f| %>
+<%= form_with(model: active_relationship, html: { method: :delete }) do |f| %>
   <%= f.submit t('views.common.unfollow'), class: "btn" %>
 <% end %>
